--- a/assets/css/question1.css
+++ b/assets/css/question1.css
@@ -4,13 +4,14 @@
     border: 10px;
     font-family: 'Times New Roman', Times, serif;
     background-color: bisque;
+
 }
 
 nav{
     padding: 10px;
 }
 
-a, .timer{
+a, .timer {
     text-align: center;
 }
 
@@ -21,20 +22,25 @@ h1, h2 {
 }
 
 form, button{
-    padding: 10px;
-    margin:10px;
-    border: 10px;
     text-align: center;
 }
 
-button, .data-letter{
+button,
+#A,
+#B,
+#C,
+#D {
     font-size: 25px;
-    background-color: antiquewhite;
+    background-color: rgb(221, 156, 71);
 }
 
-button, .data-letter:hover{
+button:hover {
     color:cadetblue;
 }
 
+#next{
 
+    background-color: rgb(221, 156, 71);
+    float: center;
+}
 
