--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,6 @@
     margin:10px;
     padding: 10px;
 }
-header {
-    display:block;
-    border: 10px;
-    padding: 10px;
-
-}
 
 h1 {
     padding: 5px;
@@ -18,7 +12,18 @@ h1 {
     text-align: center;
 }
 
+header, a,  #score{
+    display:inline-block;
+    text-align: left;
+}
+
+header, a, #timer{
+    display: flexbox;
+    text-align: right;
+}
+
 div, p{
+    font-size: 40px;
     text-align: center;
 }
 
@@ -28,4 +33,8 @@ background-color: beige;
 
 .div, .p, button:hover {
 color:cadetblue;
+}
+
+button, #submit{
+    font-size: 30px;
 }
