--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/* this pertains to front page of quiz */
+
 *{
     font-family: 'Times New Roman', Times, serif;
     background-color: bisque;
@@ -31,3 +33,8 @@ p{
 .div, #button, #start:hover{
     color: darkcyan;
 }
+
+button, #start, .active{
+    background-color: rgb(221, 156, 71);
+}
+
