--- a/assets/css/score.css
+++ b/assets/css/score.css
@@ -3,8 +3,8 @@
     padding: 10px;
     margin: 10px;
     border: 10px;
-    background-color: darkcyan;
-    color:white;
+    background-color: white;
+    color:black;
 }
 
 a, #score{
