--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,8 @@
     padding: 10px;
     margin: 10px;
     border: 10px;
-    background-color: darkcyan;
-    color:white;
+    background-color: white;
+    color:black;
 }
 
 a, #timer{
